interestingc/interestingc.bnf
CodeBlock  : Statement
           | Statement semicolon CodeBlock

Statement : Assignment

Assignment : Identifier equal_sign Expression

Expression : Expression plus_sign Term
           | Expression minus_sign Term
           | Term
           
Term       : decimal_number
